UnvMichigan - WebDesign - Responsive Design - Mod4Final

--- a/index.html
+++ b/index.html
@@ -1,65 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colors</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Murat Yaşar - Final Project</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 <body>
   <header>
-    <h1 id="top">Colors!</h1>
+    <h1 id="top">Murat Yaşar - Final Project</h1>
   </header>
 
   <main>
-    <h2>Basic Media Queries</h2>
-    <p>In this assignment you will add two media queries to the css file.</p>
-    <ul>
-      <li>The first media query should trigger at 772px and change the layout of the divs to be 45% of the viewport width. The images should have a maximum height of 30% of the viewport height.</li>
+    <p>Traveling around the world offers an unparalleled opportunity to experience the diverse cultures, cuisines, and landscapes that define our planet. From the bustling streets of Tokyo, where ancient temples stand in harmony with cutting-edge technology, to the serene beaches of the Maldives, where crystal-clear waters invite relaxation, each destination brings its unique flavor to the traveler’s journey. Exploring historical sites such as the pyramids of Egypt or the Colosseum in Rome allows one to step back in time and witness the grandeur of ancient civilizations. Meanwhile, vibrant cities like New York and Paris offer a blend of modernity and tradition, showcasing impressive skylines alongside iconic landmarks.</p>
 
-      <li>The second media query should trigger at 998px and change the layout of the divs to be 30% of the viewport width.</li>
-    </ul>
-    <p>You will need to make additional changes to ensure that the divs appear next to each other and that the images are contained within the divs.  Some of these properties include display, width and max-height.</p>
-
-    <div>
-      <img src="images/Red.jpeg" alt="Red" width="200">
-      <p class = "label">Red</p>
-    </div>
-    <div>
-      <img src="images/Orange.png" alt="Orange" width="200">
-      <p class = "label">Orange</p>
-    </div>
-    <div>
-      <img src="images/Yellow.png" alt="Yellow" width="200">
-      <p class = "label">Yellow</p>
-    </div>
-    <div>
-      <img src="images/Green.png" alt="Green" width="200">
-      <p class = "label">Green</p>
-    </div>
-    <div>
-      <img src="images/Blue.png" alt="Blue" width="200">
-      <p class = "label">Blue</p>
-    </div>
-    <div>
-      <img src="images/Indigo.jpeg" alt="Indigo" width="200">
-      <p class = "label">Indigo</p>
-    </div>
-    <div>
-      <img src="images/Purple.png" alt="Purple" width="200">
-      <p class = "label">Purple</p>
-    </div>
-    <div>
-      <img src="images/Pink.jpeg" alt="Pink" width="200">
-      <p class = "label">Pink</p>
-    </div>
-    <div>
-      <img src="images/White.png" alt="White" width="200">
-      <p class = "label">White</p>
-    </div>
+    <p>In addition to the cultural and historical richness, traveling around the world enables personal growth and self-discovery. It challenges individuals to step out of their comfort zones, adapt to new environments, and embrace unfamiliar experiences. Engaging with locals, trying new foods, and navigating different languages can enhance one's perspective and foster a deeper appreciation for the diversity of human life. Moreover, the natural wonders encountered—from the majestic peaks of the Himalayas to the expansive savannas of Africa—highlight the planet's incredible biodiversity and inspire a sense of awe and stewardship for the environment. Whether seeking adventure, relaxation, or enlightenment, world travel offers endless possibilities and lifelong memories.</p>
+    
+    <div class = "grid">
+      <figure>
+        <img src="images/agra.jpg" alt="Taj Mahal in India" width="200">
+        <figcaption>Taj Mahal, India</figcaption>
+      </figure>
+      <figure>
+        <img src="images/berlin.jpg" alt="Brandenburg Gate in Germany" width="200">
+        <figcaption>Brandenburg Gate, Germany</figcaption>
+      </figure>
+      <figure>
+        <img src="images/cullera.jpg" alt="Cullera Castle in Spain" width="200">
+        <figcaption>Cullera Castle, Spain</figcaption>
+      </figure>
+      <figure>
+        <img src="images/fuji.jpg" alt="Fuji Mountain in Japan" width="200">
+        <figcaption>Fuji Mountain, Japan</figcaption>
+      </figure>
+      <figure>
+        <img src="images/fuessen.jpg" alt="Neuswanstein Castle in Germany" width="200">
+        <figcaption>Neuswanstein Castle, Germany</figcaption>
+      </figure>
+      <figure>
+        <img src="images/giza.jpg" alt="Sphynx and the Great Pyramid in Egypt" width="200">
+        <figcaption>Sphynx and the Great Pyramid, Egypt</figcaption>
+      </figure>
+      <figure>
+        <img src="images/himeji.jpg" alt="Himeji Castle in Japan" width="200">
+        <figcaption>Himeji Castle, Japan</figcaption>
+      </figure>
+      <figure>
+        <img src="images/istanbul.jpg" alt="Blue Mosque in Turkiye" width="200">
+        <figcaption>Blue Mosque, Turkiye</figcaption>
+      </figure>
+      <figure>
+        <img src="images/london.jpg" alt="Big Ben Tower in UK" width="200">
+        <figcaption>Big Ben, UK</figcaption>
+      </figure>
+      <figure>
+        <img src="images/moscau.jpg" alt="St. Peter Basilica in Russia" width="200">
+        <figcaption>St. Peter Basilica in Russia</figcaption>
+      </figure>
+      <figure>
+        <img src="images/newyork.jpg" alt="Statue of Liberty in USA" width="200">
+        <figcaption>Statue of Liberty, USA</figcaption>
+      </figure>
+      <figure>
+        <img src="images/paris.jpg" alt="Eiffel Tower in France" width="200">
+        <figcaption>Eiffel Tower, France</figcaption>
+      </figure>
+      <figure>
+        <img src="images/pisa.jpg" alt="Pisa Tower in Italy" width="200">
+        <figcaption>Pisa Tower, Italy</figcaption>
+      </figure>
     </div>
   </main>
 
@@ -67,5 +77,4 @@
     <a href="#top">Jump to the Top</a>
   </footer>
 </body>
-
 </html>
